[gd_scene load_steps=2 format=3 uid="uid://ee5hgxahj0db"]

[ext_resource type="Script" uid="uid://cgp06m0djdc56" path="res://Scripts/StatusDisplay.gd" id="1_ulf1o"]

[node name="StatusDisplay" type="PanelContainer"]
custom_minimum_size = Vector2(150, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_ulf1o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="PlayerHPBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 2
show_percentage = false

[node name="PlayerHPLabel" type="Label" parent="VBoxContainer/PlayerHPBar"]
layout_mode = 0
offset_left = 44.0
offset_top = -25.0
offset_right = 104.0
offset_bottom = -2.0

[node name="PlayerSatietyBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 2
show_percentage = false

[node name="PlayerSatietyLabel" type="Label" parent="VBoxContainer/PlayerSatietyBar"]
layout_mode = 0
offset_left = 48.0
offset_top = -23.0
offset_right = 102.0

[node name="PlayerManaBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 2
show_percentage = false

[node name="PlayerManaLabel" type="Label" parent="VBoxContainer/PlayerManaBar"]
layout_mode = 0
offset_left = 50.0
offset_top = -24.0
offset_right = 103.0
offset_bottom = -1.0
